Ajout du logo simplon village

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   </head>
   <body id="home">
+    <img src="img/logo-simplon.png" />
     <h1>Ils codent à La Loupe !</h1>
     <p>Octobre 2014 - Avril 2015</p>
     <p>Les pages suivantes ont été réalisées par les apprentis pendant leur première semaine de formation à <a href="http://simplon-village.com">Simplon Village</a>.</p>
