--- a/david.html
+++ b/david.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<link type="text/css" rel="stylesheet" href="css/david.css"/>
+		<link type="text/css" rel="stylesheet" href="david.css"/>
 		<title>Blanchard David</title>
 	</head>
 	<body>
