correction des liens css

--- a/christopher.html
+++ b/christopher.html
@@ -1,4 +1,4 @@
-CTYPE html>
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8" />
@@ -15,16 +15,16 @@ CTYPE html>
 				<a href="mailto:cristopher.robert@hotmail.fr">cristopher.robert@hotmail.fr</a>
 			</div>
 			<div class="photo">
-				<img src="christopher.jpg" class="christopher"/>
+				<img src="img/christopher.jpg" class="christopher"/>
 			</div>
 			<div class="logo">
-				<img src="simplon.png" class="logo_simplon"/>
+				<img src="img/simplon.png" class="logo_simplon"/>
 			</div>
 	</header>
 
 		<section>
 			<div class="cuisinier_div">
-				<img src="cuisinier.jpeg" class="cuisinier"/>
+				<img src="img/cuisinier.jpeg" class="cuisinier"/>
 			</div>
 			<div class="description">
 				<p>Après un CAP cuisine, j'ai décidé de me reconvertir vers un emploi
@@ -48,7 +48,7 @@ CTYPE html>
 			</div>
 
 			<div class="image_perso">
-				<img src="buddha.jpg" class="buddha"/>
+				<img src="img/buddha.jpg" class="buddha"/>
 			</div>
 
 			<div class="avantages">
