renomage de fichier

--- a/mounir.html
+++ b/mounir.html
@@ -14,7 +14,7 @@
           <img src="http://simplon-village.com/images/logo.png" alt="logo.png"height="150" width="150">
           <img src="https://scontent-a-cdg.xx.fbcdn.net/hphotos-xpa1/v/t1.0-9/10492050_10154312347455367_5539786587791658052_n.jpg?oh=f78db8f3fc0487a8ec209f39ccf52c8c&oe=54C1BAF4" height="150"; width"150";align="right">
           <a href="#" class="button">
-            <span class="delete">Mail Mounir
+            <span class="delete">assistant-info@netcourrier.com
             </span>
           </a>
   <a href="#" class="button">
