--- a/test-remy-peyre.html
+++ b/test-remy-peyre.html
@@ -2,26 +2,27 @@
 <html>
 <link type="text/css" rel="stylesheet" href="css_remy.css"/>
 <head>
+	<meta charset="utf-8" />
 <title>Test</title>
 </head>
 <body>
-<div id="test"><img src="RP1.jpg">
-<span class="logo"><img src="Gw4.png"></span>
+<div id="test"><img src="images-g-r/RP1.jpg">
+<span class="logo"><img src="images-g-r/Gw4.png"></span>
 
-<h1>Remy Peyre</h1>
+<h1>Rémy Peyre</h1>
 <span class="fb">
 <a href="https://www.facebook.com/remy.peyre?fref=ts"/>
-<img src="RPfb.png">
+<img src="images-g-r/RPfb.png">
 </a>
 </span>
 </div>
 
 
-<div id="test1"><strong>Developpeur web</strong></div>
+<div id="test1"><strong>Développeur web</strong></div>
 <div id="test2"><strong>Age : </strong>25 ans</br>
  <strong>Adresse : </strong> 16 rue George Bernard Shaw</br>
  <strong>Num : </strong>06-47-92-16-10</br>
-<span class="mail"><a href="mailto:remy.peyre05@gmail.com"/><img src="4.png"></a></span>
+<span class="mail"><a href="mailto:remy.peyre05@gmail.com"/><img src="images-g-r/Gwen-Remy-mail.png"></a></span>
 
 
 </div>
@@ -31,31 +32,26 @@
  <div id="test3" >
 <strong>Langue :</strong> 
 Anglais : bon</br>
-<strong>Diplome :</strong> 
-BAC ES ; BTS CGO (comptabilite) ; DCG</br>
-<strong>Competences :</strong> 
+<strong>Diplôme :</strong> 
+BAC ES ; BTS CGO (comptabilité) ; DCG</br>
+<strong>Compétences :</strong> 
 Pack Office ; Ciel ; Sage </br>
 <strong>Hobbies : </strong>
 Sport (badminton,basket...) ; L'espace ; les rapaces de France </br>
 </div>
 
-<div id="test4"><strong><u>Presentation</u> :</strong>
-<p>Nam ad legere delenit, id usu autem vulputate, pri omnis commune appellantur ne. Hinc deserunt mel at, dolore persecuti ne sit. Meis falli tollit mei ea, at vim posse eruditi. Id enim hinc phaedrum mel, vis an legere elaboraret. Vix ad aeque postea impedit, noster denique te vel, mea ut elitr quidam fuisset.
-
-Sed tollit animal an, et eos utinam vocent. Has ut graece sapientem, probo ceteros at sit. Vis ullum nulla aperiri cu, eos cu equidem indoctum. Doming everti percipitur et eam.
-
-Eius veri duo te. Vel laudem nominati ea, id ignota posidonium pri, malis munere civibus ex eos. Eu summo admodum definitionem nec, tation doming fastidii ex pro. Viris elitr laoreet sit te. Nam invenire senserit rationibus ne, pro utroque voluptaria no.</p>
+<div id="test4"><strong><u>Présentation</u> :</strong>
+<p>Bonjour,</br>Je m'appelle Rémy, apres de longues années dans la comptabilité, à la fois dans les études et le monde professionnel.</br> J'ai pu me rendre compte que cet univers n'était pas fait pour moi, bien que mon réve était d'ouvrir un cabinet comptable avec mon frère.</br> J'ai décide de me rediriger vers le développement web/mobile qui ma passionne au moment même où on me la fait essayer. J'espère trouver dans cet environnement tout ce qui pourra repondre à mes attentes.</br></p>
 </div>
 
 <div id="test5">
 	<strong><u>Projets</u> : </strong>
-<p>
-am ad legere delenit, id usu autem vulputate, pri omnis commune appellantur ne. Hinc deserunt mel at, dolore persecuti ne sit. Meis falli tollit mei ea, at vim posse eruditi. Id enim hinc phaedrum mel, vis an legere elaboraret. Vix ad aeque postea impedit, noster denique te vel, mea ut elitr quidam fuisset.am ad legere delenit, id usu autem vulputate, pri omnis commune appellantur ne. Hinc deserunt mel at, dolore persecuti ne sit. Meis falli tollit mei ea, at vim posse eruditi. Id enim hinc phaedrum mel, vis an legere elaboraret. Vix ad aeque postea impedit, noster denique te vel, mea ut elitr quidam fuisset.am ad legere delenit, id usu autem vulputate, pri omnis commune appellantur ne. Hinc deserunt mel at, dolore persecuti ne sit. Meis falli tollit mei ea, at vim posse eruditi. Id enim hinc phaedrum mel, vis an legere elaboraret. Vix ad aeque postea impedit, noster denique te vel, mea ut elitr quidam fuisset.am ad legere delenit, id usu autem vulputate, pri omnis commune appellantur ne. Hinc deserunt mel at, dolore persecuti ne sit. Meis falli tollit mei ea, at vim posse eruditi. Id enim hinc phaedrum mel, vis an legere elaboraret. Vix ad aeque postea impedit, noster denique te vel, mea ut elitr quidam fuisset.</p>
+<p>Grâce à la formation SIMPLON VILLAGE, j'espère qu'au bout de ces 6 mois, j'en ressorte à la fois confiant dans mes compétences et dans mes applications.</br> Mon projet actuel serait de me lancer en freelance pendant un ou deux ans, pour acquérir de l'expérience et de l'autonomie. Puis de créer une start-up basée sur le service, c'est à dire allier la proposition de service comptable et de dévellopeur (Comptable: fiche de salaire, tenir la comptabilité, bilan. Dévellopement: créer la page internet d'un client, mettre à jours sa page ...)</br> Comme cela ma future clientèle sera complétement fidélisée et ne reposera que sur mes services, dans le but d'assurer le chiffre d'affaires.</p>
 </div>
 
 <div id="test5">
 	<strong><u>Divers</u></strong>
-	<p>Permis B, Soutient scolaire en mathematiques</p>
+	<p>Permis B, Soutient scolaire en mathématiques</p>
 </div>
 
 
@@ -64,4 +60,3 @@ am ad legere delenit, id usu autem vulputate, pri omnis commune appellantur ne. 
 
 </body>
 </html>
-
