--- a/david.html
+++ b/david.html
@@ -12,7 +12,7 @@
 		<div class="block">
 			<div id="text">
 				<h2 id="pst">Présentation</h2>
-				<h2>Bonjour, je m'appel David, j'ai 26 ans et j'habite à La Loupe. J'ai un BEP MPMI (Métier de la Production Mécanique Informatisée) que j'ai obtenu au lycée Sully de Nogent-le-Rotrou.</h2>
+				<h2>Je m'appel David, j'ai 26 ans et j'habite à La Loupe. J'ai un BEP MPMI (Métier de la Production Mécanique Informatisée) que j'ai obtenu au lycée Sully de Nogent-le-Rotrou.</h2>
 			</div>
 		</div>
 		<div class="block2">	
