modif présentation olivier

--- a/présentationolivier.html
+++ b/présentationolivier.html
@@ -9,39 +9,75 @@
 
 	<body>
 		<header>
-			<h2>Résumé non exhaustif de la vie professionnelle d'olivier Tessier</h2>
-		
+			<div class="container">
+       			<div class="row">
+            		<div class="col-md-8">Olivier Tessier            			
+            			Promotion 2014</div>
+            		 <div class="col-md-offset-1 col-md-3"><img src="img/oliviermanga1.jpg"></div>
 
-			<div id="photodepresentation">
-				<img src="img/oliviermanga1.jpg" />
-			</div>
+           		</div>
+    		</div>
 		</header>
+
+
 
 		<section>
 
 			<h3>Son projet - Sa passion</h3>
-			Olivier est véritablement fan du Japon. Et c'est cette passion pour ce pays qui lui a ouvert le projet d'obtenir un visa vacances/travail pour rester un an au pays du soleil levant et pourquoi pas y faire carrière.
+				--Olivier est véritablement fan du Japon. Et c'est cette passion pour ce pays qui lui a ouvert le projet d'obtenir un visa vacances/travail pour rester un an au pays du soleil levant et pourquoi pas y faire carrière.
 
+			<p>
+
+			<img src="img/oliviervisajapon.jpg"/>
+
+			</p>
+
+		</section>
+
+
+
+		<aside>
 
 			<h3>Son parcours</h3>
-			Il a surtout occupé des postes en rapport avec l'informatique : 
-			Il a été technicien informatique pour la Société 5/5.
-			Animateur informatique pour un Lycée Agricole.
-			Animateur informatique et il s'occupait des bornes informatique au sein de Pôle Emploi.
+				--Il a surtout occupé des postes en rapport avec l'informatique : 
+				<ul>
 
+					<li>Il a été technicien informatique pour la Société 5/5.</li>
+					<li>Animateur informatique pour un Lycée Agricole.</li>
+					<li>Animateur informatique et il s'occupait des bornes informatique au sein de Pôle Emploi.</li>
+				</ul>
+
+		</aside>
+
+
+
+		<aside>
 
 			<h3>Simplon-Village - Pourquoi, Comment</h3>
-			C'est suite à la journée portes ouvertes, du 28 juin 2014, qu'il décide de postule à l'école Simplon-village.
-			Il compte sur cette formation et tout ce qu'elle apporte, pour approfondir ses connaissances et s'ouvrir les portes vers un emploi qui le passionne.
+				--C'est suite à la journée portes ouvertes, du 28 juin 2014, qu'il décide de postule à l'école Simplon-village.
+				--Il compte sur cette formation et tout ce qu'elle apporte, pour approfondir ses connaissances et s'ouvrir les portes vers un emploi qui le passionne.
 
+		</aside>
+
+
+		<section>
 
 			<h3>Loisirs</h3>
-			Olivier aime les mangas, la musique dite "virtuelle", en particulier une chanteuse Vocaloïd : Hatsune Miku. Il aime également les jeux vidéos (trait souvent commun aux passionnés de l'info).
-			Et pour le côté sportif, il apprécie le ping-pong et les sports de raquettes.
+				--Olivier aime les mangas, la musique dite "virtuelle", en particulier une chanteuse Vocaloïd : Hatsune Miku. Il aime également les jeux vidéos (trait souvent commun aux passionnés de l'info).
+				--Et pour le côté sportif, il apprécie le ping-pong et les sports de raquettes.
 
 
 			<h3>Et lui alors??</h3>
-			Agé de 29 ans, il réside à Montireau en Eure-et-Loir et est Célibataire. Il est titulaire du Permis B.
-			Il suivi des études en BEP Electrotechnique et a obtenu un Bac Pro Informatique.
+				--Agé de 29 ans, il réside à Montireau en Eure-et-Loir et est Célibataire. Il est titulaire du Permis B.
+				--Il suivi des études en BEP Electrotechnique et a obtenu un Bac Pro Informatique.
 
-			<video src="<iframe width="560" height="315" src="//www.youtube.com/embed/f70TE3rCfMU" frameborder="0" allowfullscreen></iframe>" />
+		</sections>
+
+
+		<footer>
+
+				<div class="media col-lg 12">
+				<div class="pull-center">
+					<<iframe width="560" height="315" src="http://www.youtube.com/embed/PPj5wwRLnL8" frameborder="0" allowfullscreen></iframe>
+
+		</footer>
