modif page david

--- a/david.html
+++ b/david.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<link type="text/css" rel="stylesheet" href="css/david.css"/>
+		<link type="text/css" rel="stylesheet" href="david.css"/>
 		<link rel="icon" href="img/icone.ico"/>
 		<title>Blanchard David</title>
 	</head>
@@ -19,7 +19,7 @@
 			<div id="text2">
 				<h2 id="sv">Simplon Village</h2>
 				<h2>J'ai connu Simplon Village grâce à un ami.</h2>
-				<h2>Etant passionné de l'informatique, et voulant me reconvertir <br> car mon métier ne me plaisait plus, j'ai participé à une journée d'initiation à la programmation web organisé par Simplon Village le 11 juin 2014. </h2>
+				<h2>Etant passionné de l'informatique, et voulant me reconvertir <br> car mon métier ne me plaisait plus, j'ai participé à une journée d'initiation à la programmation web organisé par Simplon Village le 28 juin 2014. </h2>
 				<h2>Cela m’a beaucoup plus, j'ai donc voulu participer à la formation de développeur web de 6 mois.</h2>
 			</div>
 		</div>
