--- a/présentationolivier.html
+++ b/présentationolivier.html
@@ -94,11 +94,11 @@
 
 
 					<p>
-					<img src="img/oliviermanga2.jpg"/>
+					<img src="img/oliviermanga2.jpg"  />
 					</p>
 
 					<p>
-						<imp src="img/oliviersport.jpeg"/>
+						<img src="img/oliviersport.jpeg"/>
 					</p>
 
 				</div>
