--- a/présentationolivier.html
+++ b/présentationolivier.html
@@ -60,6 +60,9 @@
 					<li>Animateur informatique et il s'occupait des bornes informatique au sein de Pôle Emploi.</li></strong>
 
 				</ul>
+					<p>
+						<img src="img/geekolivier.jpg" />
+					</p>
 
 				</div>
 
@@ -76,6 +79,11 @@
 
 				<strong>C'est suite à la journée portes ouvertes, du 28 juin 2014, qu'il décide de postule à l'école Simplon-village.
 				Il compte sur cette formation et tout ce qu'elle apporte, pour approfondir ses connaissances et s'ouvrir les portes vers un emploi qui le passionne.</strong>
+
+					<p>
+						<img src="img/simplonolivier.jpg" />
+					</p>
+
 
 				</div>
 
@@ -98,7 +106,7 @@
 					</p>
 
 					<p>
-						<img src="img/oliviersport.jpeg"/>
+						<img src="img/oliviersport.jpg"/>
 					</p>
 
 				</div>
