Modifications liens images et .css

--- a/pascal.html
+++ b/pascal.html
@@ -3,8 +3,8 @@
 
 	<head>
 		<meta charset="utf-8">
-		<link href="pascal.css" rel="stylesheet" type="text/css" />
-		<link href="bootstrap.css" rel="stylesheet" />
+		<link href="./css/pascal.css" rel="stylesheet" type="text/css" />
+		<link href="./css/bootstrappascal.css" rel="stylesheet" type="text/css" />
 		<title>Profil de Pascal</title>
 
 	</head>
@@ -13,10 +13,10 @@
 		<div class="header"id="header" style="background-color: #131313">
 			<p id="pascal" style = "font-size:54px; color:red; font-family: Oswald">Pascal Richet.</p>
 			<p id="citation" style="font-size:14px; color:white; font-family: monospace"><em>"Codeur en devenir..."</em></p>
-			<a id="logo" href="http://simplon-village.com/"><img src = "IMG/logo-simplon.png"width="150"heigh="150"></img></a>
+			<a id="logo" href="http://simplon-village.com/"><img src = "./img/logo-simplon.png"width="150"heigh="150"></img></a>
 			<div><a id ="button" href="mailto:pashlord@gmail.com"><button type="button" class="btn btn-danger btn-sm active">Contactez-moi !</button></a></div>
-			<a href="https://fr-fr.facebook.com/"><img id="facebook" src="IMG/facebookicon.png" height="22" width="22"></a>
-			<img id="damon" src="IMG/damon.jpg" alt="img-responsive" class="img-rounded" width="100"heigh="100">
+			<a href="https://fr-fr.facebook.com/"><img id="facebook" src="./img/facebookicon.png" height="22" width="22"></a>
+			<img id="damon" src="./img/damon.jpg" alt="img-responsive" class="img-rounded" width="100"heigh="100">
 		</div>
 
 <br></br>
@@ -44,17 +44,17 @@
 					</em>
 				</ol>
 			</div>
-			<div class="col-md-6"><img id="avion" src="IMG/avion.jpg" alt="img-responsive" width="200"heigh="200"></div>
-			<div class="col-md-6"><img id="avion4" src="IMG/avion.jpg" alt="img-responsive" width="200"heigh="200"></div>
-			<div class="col-md-6"><img id="avion5" src="IMG/avion.jpg" alt="img-responsive" width="200"heigh="200"></div>
+			<div class="col-md-6"><img id="avion" src="./img/avion.jpg" alt="img-responsive" width="200"heigh="200"></div>
+			<div class="col-md-6"><img id="avion4" src="./img/avion.jpg" alt="img-responsive" width="200"heigh="200"></div>
+			<div class="col-md-6"><img id="avion5" src="./img/avion.jpg" alt="img-responsive" width="200"heigh="200"></div>
 		</div>
 
 <br></br>
 
 		<div id="etudes" style="background-color: white" class="row">
-			<div class="col-md-6"><img  id="avion2" src="IMG/avion.jpg" alt="img-responsive" width="200"heigh="200"></div>
-			<div class="col-md-6"><img id="avion9" src="IMG/avion.jpg" alt="img-responsive" width="200"heigh="200"></div>
-			<div class="col-md-6"><img id="avion10" src="IMG/avion.jpg" alt="img-responsive" width="200"heigh="200"></div>
+			<div class="col-md-6"><img  id="avion2" src="./img/avion.jpg" alt="img-responsive" width="200"heigh="200"></div>
+			<div class="col-md-6"><img id="avion9" src="./img/avion.jpg" alt="img-responsive" width="200"heigh="200"></div>
+			<div class="col-md-6"><img id="avion10" src="./img/avion.jpg" alt="img-responsive" width="200"heigh="200"></div>
         	<div class="col-md-6"><ul><li style = "font-size:32px; font-family: Oswald">Etudes :</li></ul>
 				<ol class="text-justify">
 					<em>
@@ -91,9 +91,9 @@
 					</em>
 				</ol>
 			</div>
-			<div class="col-md-6"><img id="avion3" src="IMG/avion.jpg" alt="img-responsive" width="200"heigh="200"></div>
-			<div class="col-md-6"><img id="avion7" src="IMG/avion.jpg" alt="img-responsive" width="200"heigh="200"></div>
-			<div class="col-md-6"><img id="avion8" src="IMG/avion.jpg" alt="img-responsive" width="200"heigh="200"></div>
+			<div class="col-md-6"><img id="avion3" src="./img/avion.jpg" alt="img-responsive" width="200"heigh="200"></div>
+			<div class="col-md-6"><img id="avion7" src="./img/avion.jpg" alt="img-responsive" width="200"heigh="200"></div>
+			<div class="col-md-6"><img id="avion8" src="./img/avion.jpg" alt="img-responsive" width="200"heigh="200"></div>
 
 		</div>
 
