Correction des nom de fichiers
  * et correction des liens vers les fichiers css

--- a/amandine.html
+++ b/amandine.html
@@ -3,7 +3,7 @@
 <head>
 
 	<meta charset="utf-8"/>
-	<link rel="stylesheet" href="Amandine.css" />
+	<link rel="stylesheet" href="css/Amandine.css" />
 	<title> Amandine</title>
 </head>
 
