--- a/mathieu.html
+++ b/mathieu.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<link type="text/css" rel="stylesheet" href="mathieu.css">
+		<link type="text/css" rel="stylesheet" href="css/mathieu.css">
 		<title>ROMAIN BEAUMONT</title>
 	</head>
 		<body>	
