--- a/naziha.html
+++ b/naziha.html
@@ -1,1 +1,41 @@
-Hello World!
+<!DOCTYPE html>
+<html>
+	<head>
+		<link type="text/css" rel="stylesheet" href="./css/Naziha.css">
+		<title>Profil de Naziha</title>
+	</head>
+	<body>
+		<div id="header">
+			<img id="profilpic" src="./img/Naziha.jpg"/>
+			<h1>Naziha Mhamdi</h1>
+			<ul id="firstul">
+				<li><strong>Nee le 15/04/1985</strong></li>
+				<li><strong>Tunisienne de Sang !</strong>
+				<li><strong>Heureuse d'etre a Simplon !</strong>
+			</ul>
+			<div id="profil"><a id="profilpar" href="#Area">Profil</a></div>
+			<div id="more"><a id="morepar" href="#Areabis">A propos</a></div>
+		</div>
+		<div id="Area">
+			<h3>Diplome:</h3>
+				<ul id="desc">
+					<li id="libis">Bac + 4 en Information Appliquee a la Gestion</li>
+				</ul>
+			<h3>Experiences:</h3>
+				<ul id="desc">
+					<li id="libis">Enseignement en BTS SIO au Lycee Fulbert</li>	
+					<li id="libis">Assistante de direction en Tunisie</li>	
+					<li id="libis">Educatrice scolaire a Lyon</li>	
+				</ul>
+		</div>
+		<div id="Areabis">
+			<ul id="desc">
+				<p id="descbis"><strong>Meme apres 6ans de ruptures, je suis toujours passionee par l'informatique !"</strong></p>
+			</ul>
+			<h3>Projet:</h3>
+				<ul id="desc">
+					<li>J'ai comme projet de developper mes competences et de me diriger vers l'enseignement.</li>	
+				</ul>
+		</div>
+	</body>
+</html>
