--- a/remy.html
+++ b/remy.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<link type="text/css" rel="stylesheet" href="css_remy.css"/>
+<link type="text/css" rel="stylesheet" href="css/css_remy.css"/>
 <head>
 	<meta charset="utf-8" />
 <title>Test</title>
