--- a/vivien.html
+++ b/vivien.html
@@ -6,7 +6,7 @@
 <meta charset="utf-8" />
 
 <title>Vivien Debeaupte</title>
-<link rel="stylesheet" type="text/css" href="vivien.css" />
+<link rel="stylesheet" type="text/css" href="css/vivien.css" />
 
 </head>
 
