--- a/gwen.html
+++ b/gwen.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <audio utoplay loop><source src=""></audio>
-<link type="text/css" rel="stylesheet" href="css_gwen.css"/>
+<link type="text/css" rel="stylesheet" href="css/css_gwen.css"/>
 <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
 <head>
 		<meta charset="utf-8" />
