--- a/micka.html
+++ b/micka.html
@@ -3,8 +3,8 @@
 <head>
 
 	<title>Mickaël de Raëmy</title>
-	<link href="/home/apprenti/Bureau/projet/CSS/bootstrap.css" rel="stylesheet">
-	<link href="/home/apprenti/Bureau/projet/CSS/style.css" rel="stylesheet">
+	<link href="css/bootstrap.css" rel="stylesheet">
+	<link href="css/micka.css" rel="stylesheet">
   <link href='http://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Syncopate:700' rel='stylesheet' type='text/css'>
   <meta charset="utf-8">
@@ -24,7 +24,7 @@
   <div class="row1">
   <div class="row">
     
-      <div class="col-md-4"> <img style="height:auto; width:auto; max-width:400px; max-height:400px;" src="/home/apprenti/Bureau/projet/img/Micka.jpg"> </img> 
+      <div class="col-md-4"> <img style="height:auto; width:auto; max-width:400px; max-height:400px;" src="../promo2014/img/Micka.jpg"> </img> 
       </div>
       <div class="col-md-4"> <p> Je pourrais vous dire tous les diplômes et expériences que j'ai, mais cela ne me présenterait pas en tant que personne.</p>
       <p>Maintenant si vous êtes curieux, vous pouvez voir mon CV en visitant <a href="http://www.mickaelderaemy.com">cette page</a>.</p>
@@ -46,7 +46,7 @@
   <div class ="row">
     <div class="col-md-6"> <p> Actuellement en formation chez Simplon Village, je perfectionne mon savoir de développeur. Je vois cette école comme une opportunité pour lier l'entreprenariat et mon intérêt pour la photographie. Je suis fière d'être un "Simplonnien ! Et remercie toutes les personnes qui ont mis en place et permis cette formation." </p> 
     </div>
-    <div class="col-md-6"> <img style="height:auto; width:auto; max-width:300px; max-height:300px;" src="/home/apprenti/Bureau/projet/img/logo.png"> </img>
+    <div class="col-md-6"> <img style="height:auto; width:auto; max-width:300px; max-height:300px;" src="../promo2014/img/logo.png"> </img>
     </div>
   </div>  
   </div>
@@ -54,9 +54,9 @@
   <div class="row">
     <div class="col-md-3">
     </div>
-    <div class="col-md-3"> <a href="mailto:mickaelderaemy@gmail.com"> <img style="height:auto; width:auto; max-width:50px; max-height:50px;" src="/home/apprenti/Bureau/projet/img/gmail.png"> </img> </a>
+    <div class="col-md-3"> <a href="mailto:mickaelderaemy@gmail.com"> <img style="height:auto; width:auto; max-width:50px; max-height:50px;" src="../promo2014/img/gmail.png"> </img> </a>
     </div>
-    <div class="col-md-3"> <a href="https://fr-fr.facebook.com/public/Mickaël-de-Raëmy"> <img style="height:auto; width:auto; max-width:50px; max-height:50px;" src="/home/apprenti/Bureau/projet/img/facebook.png"> </img> </a>
+    <div class="col-md-3"> <a href="https://fr-fr.facebook.com/public/Mickaël-de-Raëmy"> <img style="height:auto; width:auto; max-width:50px; max-height:50px;" src="../promo2014/img/fbicone.png"> </img> </a>
     </div>
     <div class="col-md-3">
     </div>
@@ -64,7 +64,7 @@
   </div>
   <div class="row5">
   <div class="row">
-    <div class="col-md-12"> <a href="#top"> <img style="height:auto; width:auto; max-width:70px; max-height:70px;" src="/home/apprenti/Bureau/projet/img/fleche.png"> 
+    <div class="col-md-12"> <a href="#top"> <img style="height:auto; width:auto; max-width:70px; max-height:70px;" src="../promo2014/img/fleche.png"> 
     </img> </a>
     </div>
   </div>
