--- a/gwen.html
+++ b/gwen.html
@@ -42,7 +42,7 @@ Pack Office ; Gimp; Mixcraft; Audacity </br>
 Musique (écouter et jouer d'un instrument), Jeux Videos, séries </br>
 </div>
 
-<div id="test4"><strong><u>Presentation</u> :</strong>
+<div id="test4"><strong><u>Présentation</u> :</strong>
 <p>Bonjour, je m'appelle Gwenaël, j'ai 22 ans, et depuis mon plus jeune âge je suis passionné d'informatique et de musique.</br>J'ai découvert ma passion pour l'informatique par le biais des jeux-videos; et de fil en aiguille j'ai décidé d'aiguiser mes compétences afin que celles-ci puissent dans le futur m'être utile. J'ai donc fini par intégrer un stage d'observation dans une agence de web-design (limpide) et ainsi appris les bases du travail d'un web-designer.</p>
 </div>
 
