--- a/remy.html
+++ b/remy.html
@@ -6,13 +6,13 @@
 <title>Test</title>
 </head>
 <body>
-<div id="test"><img src="images-g-r/RP1.jpg">
-<span class="logo"><img src="images-g-r/Gw4.png"></span>
+<div id="test"><img src="../promo2014/img/RP1.jpg">
+<span class="logo"><img src="../promo2014/img/Gw4.png"></span>
 
 <h1>Rémy Peyre</h1>
 <span class="fb">
 <a href="https://www.facebook.com/remy.peyre?fref=ts"/>
-<img src="images-g-r/RPfb.png">
+<img src="../promo2014/img/RPfb.png">
 </a>
 </span>
 </div>
@@ -22,7 +22,7 @@
 <div id="test2"><strong>Age : </strong>25 ans</br>
  <strong>Adresse : </strong> 16 rue George Bernard Shaw</br>
  <strong>Num : </strong>06-47-92-16-10</br>
-<span class="mail"><a href="mailto:remy.peyre05@gmail.com"/><img src="images-g-r/Gwen-Remy-mail.png"></a></span>
+<span class="mail"><a href="mailto:remy.peyre05@gmail.com"/><img src="../promo2014/img/Gwen-Remy-mail.png"></a></span>
 
 
 </div>
